use java preview version an starting refactoring